# myboost

./: .env  .gcloudignore  .gitignore  PROJECT_BRIEF.md  README.md  app.yaml  cron.yaml  makefile  manage.py  pyproject.toml  requirements.txt
client_reporting/: apps.py  urls.py  views.py
client_reporting/templates/: client_report.html
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: ClientApp.tsx  CoffeeApp.tsx  client_report.tsx  companies_report.tsx  index.css
frontend/src/components/: AppHeader.tsx  AppSidebar.tsx  ContactFaultSheet.tsx  CustomerFilterDropdown.tsx  ProtectedRoute.tsx  (+1 more)
myboost/: asgi.py  jwt_serializers.py  jwt_views.py  permissions.py  settings.py  urls.py  wsgi.py
provider/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
provider/migrations/: 0001_initial.py  0002_alter_provider_options_and_more.py
reporting/: admin.py  apps.py  auth_utils.py  models.py  serializers.py  urls.py  views.py
reporting/core/: access.py  agents.py  backup.py  checks.py  clients.py  contact.py  dashboard.py  dashboard_customers.py  device_site_apis.py  devices.py  outages.py  params.py  servers.py  sites.py  store_sync.py  sync.py  workstations.py
reporting/migrations/: 0001_initial.py  0002_sync_models.py  0003_usercustomerprofile.py  0004_fault_report.py  0005_sync_run_and_extended_sync_models.py  0006_sync_device_extra_models.py
reporting/templates/: reporting_dashboard.html
shareable_report/: apps.py  signing_utils.py  urls.py  views.py
templates/: landing.html
(+38 files in other folders)
